[WEBPLEASE-109]:Fixed Dark Mode Color

--- a/src/index.scss
+++ b/src/index.scss
@@ -98,6 +98,8 @@ body{
 
     --box-signup:#d9d9d9;
     --bg-card-question: #f1f3f4;
+
+    --ant-empty-img:#CCCCCC
 }
 :root.dark{
     --white_color:rgba(255, 255, 255, 0.85);
@@ -134,6 +136,8 @@ body{
     --separator-color:rgba(255, 255, 255, 0.85);
     --bg-card-question: rgba(0, 0, 0, 0.04);
 
+    --ant-empty-img:#434343
+
 }
 .disabled-row {
     background-color: #dcdcdc;
@@ -142,6 +146,16 @@ body{
 .div_filter .ant-input-affix-wrapper{
     border:1px solid var(--border_color) !important;
 }
+.ant-empty-img-simple-path{
+    fill: var(--ant-empty-img) !important;
+}
+.ant-empty-img-simple-g{
+  stroke: var(--ant-empty-img) !important;
+}
+.ant-empty-img-simple-ellipse {
+    fill: var(--ant-empty-img) !important;
+    fill-opacity: 0.4 !important;
+}
 .ant-picker-range-separator .anticon{
     color: var(--white_color) !important;
 }
@@ -149,6 +163,14 @@ body{
     font-family: "SF Pro Display";
     font-size: 14px;
     font-weight: normal;
+}
+
+.ant-checkbox-inner , .ant-radio-inner{
+    background-color: var(--card_color) !important;
+    border: 1px solid var(--border_color) !important;
+}
+.ant-checkbox-checked .ant-checkbox-inner{
+    background-color: #2090FF !important;
 }
 
 .ant-picker-calendar-full .ant-picker-panel .ant-picker-calendar-date-today .ant-picker-calendar-date-value{
@@ -402,6 +424,7 @@ body{
 .ant-select-dropdown{
     background-color: var(--option_select) !important;
     color: var(--white_color) !important;
+    z-index: 9999999999999999;
 }
 .ant-select-item-option-content{
     color: var(--white_color) !important;
@@ -765,7 +788,7 @@ color: var(--white_color) !important;
     background-color: RGB(255, 255, 255);
     box-shadow: 0 3px 6px -4px rgba(0, 0, 0, 0.12) , 0 6px 16px 0 rgba(0, 0, 0, 0.08) , 0 9px 28px 8px rgba(0, 0, 0, 0.05);
     position: absolute;
-    z-index: 9;
+    z-index: 99999;
     padding: 1%;
 }
 .div1_div_Filter{
